--- a/vorstellung.html
+++ b/vorstellung.html
@@ -5,8 +5,13 @@
 </head>
 
 <body>
-    <p>Mein Name ist Kevin Oberdorfer (19) und arbeite bei Wüstenrot.</p>
-    <p>Ich habe vor paar Jahren mal etwas mit HTML gemacht</p>
+    <h1>Mein Name ist Kevin Oberdorfer (19) und arbeite bei Wüstenrot.</h1>
+    <h2>Ich habe vor paar Jahren mal etwas mit HTML gemacht</h2>
+    <break></break>
+    <h2>Meine Hobbys sind:</h2>
+    <li>Sport</li>
+    <li>Gaming</li>
+    <li>Mit Freunden etwas unternehemen</li>
 </body>
 
 </html>
