--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beschreibung der Seite (erscheint in der Titelzeile des Browsers)</title>
-  </head>
-  <body>
-    <p>Dieser Text wird im Browserfenster angezeigt teeeeeeeeeest.</p>
-    <br>
-  </body>
+<head>
+<title>Vorstellung</title>
+</head>
+
+<body>
+The content of the document......
+</body>
+
 </html>
