--- a/vorstellung.html
+++ b/vorstellung.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-    <h1>Mein Name ist Kevin Oberdorfer (19) und arbeite bei Wüstenrot.</h1>
+    <h1>Mein Name ist Kevin Oberdorfer (19).</h1>
+    <break></break>
     <h2>Ich habe vor paar Jahren mal etwas mit HTML gemacht</h2>
     <break></break>
     <h2>Meine Hobbys sind:</h2>
