--- a/vorstellung.html
+++ b/vorstellung.html
@@ -13,6 +13,7 @@
     <li>Sport</li>
     <li>Gaming</li>
     <li>Mit Freunden etwas unternehemen</li>
+    <link rel="stylesheet" href="style.css">
 </body>
 
 </html>
