--- a/vorstellung.html
+++ b/vorstellung.html
@@ -14,6 +14,7 @@
     <li>Gaming</li>
     <li>Mit Freunden etwas unternehemen</li>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </body>
 
 </html>
