--- a/vorstellung.html
+++ b/vorstellung.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Mein Name ist Kevin Oberdorfer (19).</h1>
     <break></break>
-    <h2>Ich habe vor paar Jahren mal etwas in der Schule mit HTML gemacht</h2>
+    <h2>Ich habe vor paar Jahren mal etwas in der Schule mit HTML gemacht und es hat mir sehr viel spaß gemacht</h2>
     <break></break>
     <h2>Meine Hobbys sind:</h2>
     <li>Sport</li>
